--- a/html/pfappserver/lib/pfappserver/I18N/en.po
+++ b/html/pfappserver/lib/pfappserver/I18N/en.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: 6.5.9\n"
 "POT-Creation-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"PO-Revision-Date: 2017-03-22 12:42-0400\n"
+"PO-Revision-Date: 2017-03-22 12:55-0400\n"
 "Last-Translator: Inverse inc. <info@inverse.ca>\n"
 "Language-Team: English\n"
 "Language: en\n"
@@ -4155,6 +4155,14 @@ msgstr ""
 
 # html/pfappserver/lib/pfappserver/Form/Violation.pm
 msgid "Number of times a host will be able to try and self remediate before they are locked out and have to call the help desk. This is useful for users who just <i>click through</i> violation pages."
+msgstr ""
+
+# conf/documentation.conf (snmp_traps.nbtraphandlerthreads)
+msgid "Number of trap handler threads pfsetvlan should start"
+msgstr ""
+
+# conf/documentation.conf (snmp_traps.nbtrapparserthreads)
+msgid "Number of trap parser threads pfsetvlan should start"
 msgstr ""
 
 # html/pfappserver/root/admin/configuration.tt
@@ -10159,6 +10167,14 @@ msgstr "Bounce duration"
 # conf/documentation.conf
 msgid "snmp_traps.closelocationlogonstop"
 msgstr "Close on stop"
+
+# conf/documentation.conf
+msgid "snmp_traps.nbtraphandlerthreads"
+msgstr "Handler threads count"
+
+# conf/documentation.conf
+msgid "snmp_traps.nbtrapparserthreads"
+msgstr "Parser threads count"
 
 # conf/documentation.conf
 msgid "snmp_traps.trap_limit"
